--- a/Analysing_consumption_habits.ipynb
+++ b/Analysing_consumption_habits.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "In order to find a solution to this issue I found that this particular company offered the option to download the receipt in a digital format through their website. So this was actually what I did. Since the original data was in a pdf format and not a scan like my previous try I found out that this helped a lot in data quality. Here is the same receipt but in it original pdf format.\n",
     "\n",
-    "Convinced that this was the best type for my data I manually downloaded the receipts. If anybody knows how to do it automatically please let me know. So, here you will find the <a href=\"https://drive.google.com/file/d/1cl0NC4IE9-H6zNncszAjTW1GglVdRhB-/view?usp=sharing\">71 receipts</a>. I copy and pasted the context of the pdf files and using a regexp extracted the previously mentioned fields and put them in into excel to finally get this <a href= \"https://drive.google.com/file/d/1O1gUBz0_aSfuZKJR7gGhGkklHe-wm9UX/view?usp=sharing\">dataset</a>."
+    "Convinced that this was the best type for my data I manually downloaded the receipts. If anybody knows how to do it automatically please let me know. So, here you will find the <a href=\"https://drive.google.com/file/d/1cl0NC4IE9-H6zNncszAjTW1GglVdRhB-/view?usp=sharing\">71 receipts</a>. I copied and pasted the content of all pdf files and using a regexp extracted the previously mentioned fields and put them in into excel to finally get this <a href= \"https://drive.google.com/file/d/1O1gUBz0_aSfuZKJR7gGhGkklHe-wm9UX/view?usp=sharing\">dataset</a>."
    ]
   },
   {
